data/derived/fa15/progs/unify/prog2445.ml.out
Characters 46-47:
  let f a x = fun y c -> x (a) = x in
                                 ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a -> 'b
